--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@
       }
 
       .containerMenu{
-        max-width: 1170px;
+        max-width: 100%;
         margin:auto;
         margin-top: 10px;
       }
